force-app/main/default/objects/cdcpc__RD_Outlet_Ring_Part_Number__c/cdcpc__RD_Outlet_Ring_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Outlet Ring Part Number</label>
    <nameField>
        <label>RD Outlet Ring Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Outlet Ring Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>