force-app/main/default/objects/cdcpc__RD_Outlet_Ring_Part_Number__c/fields/cdcpc__MCOR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCOR__c</fullName>
    <label>MCOR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>