force-app/main/default/objects/cdcpc__RD_Outlet_Ring_Part_Number__c/fields/cdcpc__OptionCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OptionCode__c</fullName>
    <label>OptionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>