force-app/main/default/objects/cdcpc__RD_Outlet_Ring_Part_Number__c/fields/cdcpc__ProcMedia__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ProcMedia__c</fullName>
    <label>ProcMedia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>