force-app/main/default/objects/cdcpc__RD_Outlet_Ring_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__OutletRingPartNumber__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__TestingCode__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__MCOR__c</columns>
    <columns>cdcpc__MCDT__c</columns>
    <columns>cdcpc__PressLL__c</columns>
    <columns>cdcpc__PressUL__c</columns>
    <columns>cdcpc__TefSealThickLL__c</columns>
    <columns>cdcpc__TefSealThickUL__c</columns>
    <columns>cdcpc__Part_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__OutletRingPartNumber__c</field>
        <operation>equals</operation>
        <value>RGV030000500FS0050000000</value>
    </filters>
    <filters>
        <field>cdcpc__STC__c</field>
        <operation>equals</operation>
        <value>FS</value>
    </filters>
    <label>All</label>
</ListView>